# diagrams-icons

./: README.md
AI-Ops-Product/opensource/aiops-platform/: Makefile  README.md  pyproject.toml  requirements.txt
AI-Ops-Product/opensource/aiops-platform/docs/: architecture.md  canonical-model.md  governance.md  identity-resolution.md  kpis-slos.md  operational-readiness.md  plugin-architecture.md  rfc-template.md  roadmap.md  security.md  threat-model.md
AI-Ops-Product/opensource/aiops-platform/infra/: Dockerfile  docker-compose.yml
AI-Ops-Product/opensource/aiops-platform/tests/: test_change_correlation.py  test_cicd_plugins.py  test_entity_resolver.py  test_processors.py  test_rca.py  test_topology.py
TCB/ho-so-thau/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  SETUP.md  WORKFLOW.md  config.yaml.example  docker-compose.yml  pyproject.toml
TCB/ho-so-thau/.cursor/rules/: document-types.mdc  document-workflow.mdc  formatting-standards.mdc  review-checklist.mdc
TCB/ho-so-thau/.locks/: .gitignore  README.md
TCB/ho-so-thau/chat/: generateTemplateFiles.md  updatePart2FromConfluence.md
TCB/ho-so-thau/scripts/: check_locks.sh  confluence_fetcher.py  extract_images.py  insert_images.py  lock_document.sh  pptx_builder.py  render_docs.py  strip_tracking.py  template_engine.py  unlock_document.sh  update_part2_from_confluence.py  word_formatter.py  xlsx_formatter.py
TCB/ho-so-thau/templates/: template_config.yaml
TCB/ho-so-thau/templates/excel/: data_report_template.xlsx  pricing_template.xlsx
TCB/ho-so-thau/tmp/handoff/: phase2.md
(+46 files in other folders)
