[project]
name = "ho-so-thau"
version = "1.0.0"
description = "AI-powered document processing workflow for Word, Excel, and PowerPoint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-pptx>=1.0.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
